source/user_guide_tree/index: update tuto.

--- a/doc/source/_static/tutorial/capsul_descriptive_tutorial.ipynb
+++ b/doc/source/_static/tutorial/capsul_descriptive_tutorial.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:fb5528be78c96eea3bb74d5c41457505cab6c13e3655df2e5f2f3dcff35bfe71"
+  "signature": "sha256:53f5ffbbccdd5d7a405c5ed7ee4926c4c2b9abc3d08f68cbd0e9e37db9ce2c78"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -123,19 +123,51 @@
      "metadata": {},
      "outputs": [
       {
-       "ename": "ImportError",
-       "evalue": "cannot import name is_trait_value_defined",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-4-9c97bfc7ff2e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mcapsul\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mprocess\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mget_process_instance\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mfuncprocess\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mget_process_instance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"capsul.utils.test.module.a_function_to_wrap\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mfuncprocess\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhelp\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-        "\u001b[1;32m/home/ag239446/git/capsul/capsul/process/__init__.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;31m##########################################################################\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mprocess\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mProcess\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mprocess\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mNipypeProcess\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mprocess\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mProcessResult\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-        "\u001b[1;32m/home/ag239446/git/capsul/capsul/process/process.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     30\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msoma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcontroller\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtrait_ids\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     31\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msoma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mutils\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mLateBindingProperty\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 32\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0msoma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcontroller\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtrait_utils\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mis_trait_value_defined\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     33\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msoma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcontroller\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtrait_utils\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mis_trait_pathname\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     34\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msoma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcontroller\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtrait_utils\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mget_trait_desc\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-        "\u001b[1;31mImportError\u001b[0m: cannot import name is_trait_value_defined"
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        " A dummy fucntion that just print all its parameters.\n",
+        "\n",
+        "    \n",
+        "\n",
+        ".. note::\n",
+        "\n",
+        "    * Type 'AFunctionToWrap.help()' for a full description of this process parameters.\n",
+        "    * Type '<AFunctionToWrap>.get_input_spec()' for a full description of this process input trait types.\n",
+        "    * Type '<AFunctionToWrap>.get_output_spec()' for a full description of this process output trait types.\n",
+        "\n",
+        "\n",
+        "This process has been wrapped from capsul.utils.test.module.a_function_to_wrap.\n",
+        "\n",
+        "Inputs\n",
+        "~~~~~~\n",
+        "\n",
+        "[Mandatory]\n",
+        "\n",
+        "directory: a directory name (['Directory'] - mandatory)\n",
+        "    test\n",
+        "list_of_str: a legal value (['List_Str'] - mandatory)\n",
+        "    test\n",
+        "value: a float (['Float'] - mandatory)\n",
+        "    test\n",
+        "enum: a string (['Str'] - mandatory)\n",
+        "    test\n",
+        "fname: a file name (['File'] - mandatory)\n",
+        "    test\n",
+        "\n",
+        "Outputs\n",
+        "~~~~~~~\n",
+        "\n",
+        "string: a string\n",
+        "    test\n",
+        "reference: a legal value\n",
+        "    test\n",
+        "\n"
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
@@ -165,11 +197,11 @@
         "ALL FUNCTION PARAMETERS::\n",
         "\n",
         "4.3c['a', 'b']\n",
-        "['27', '27', '27']\n"
+        "['27']\n"
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 4
     },
     {
      "cell_type": "markdown",
@@ -290,7 +322,9 @@
         "    test\n",
         "fname: a file name (['File'] - mandatory)\n",
         "    test\n",
-        "nodes_activation: a Controller or None (['Instance'] - mandatory)\n",
+        "nodes_activation: a Controller or None (['Instance_Controller',\n",
+        "    'Instance_HasTraits', 'Instance_CHasTraits', 'Instance_object'] -\n",
+        "    mandatory)\n",
         "    No description.\n",
         "\n",
         "Outputs\n",
@@ -304,7 +338,7 @@
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 6
     },
     {
      "cell_type": "markdown",
@@ -318,25 +352,26 @@
      "collapsed": false,
      "input": [
       "import sys\n",
-      "from PySide import QtGui\n",
+      "from PyQt4 import QtGui\n",
       "from capsul.qt_gui.widgets import PipelineDevelopperView\n",
       "from capsul.qt_gui.controller_widget import ControllerWidget\n",
       "\n",
-      "try:\n",
+      "app_created = False\n",
+      "app = QtGui.QApplication.instance()\n",
+      "if app is None:\n",
       "    app = QtGui.QApplication(sys.argv)\n",
-      "except:\n",
-      "    app = QtGui.QApplication.instance()\n",
+      "    app_created = True\n",
       "view = PipelineDevelopperView(xmlpipe)\n",
       "controller = ControllerWidget(xmlpipe, live=True)\n",
       "view.show()\n",
       "controller.show()\n",
-      "app.exec_()\n",
-      "del view"
+      "if app_created:\n",
+      "    app.exec_()"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 8
+     "prompt_number": 12
     },
     {
      "cell_type": "markdown",
@@ -415,7 +450,7 @@
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 13
     },
     {
      "cell_type": "markdown",
@@ -465,7 +500,9 @@
         "    test\n",
         "switch_p1_p2: a legal value (['Enum'] - mandatory)\n",
         "    No description.\n",
-        "nodes_activation: a Controller or None (['Instance'] - mandatory)\n",
+        "nodes_activation: a Controller or None (['Instance_Controller',\n",
+        "    'Instance_HasTraits', 'Instance_CHasTraits', 'Instance_object'] -\n",
+        "    mandatory)\n",
         "    No description.\n",
         "pdirectory: a directory name (['Directory'] - mandatory)\n",
         "    test\n",
@@ -479,7 +516,7 @@
        ]
       }
      ],
-     "prompt_number": 9
+     "prompt_number": 14
     },
     {
      "cell_type": "markdown",
@@ -493,25 +530,27 @@
      "collapsed": false,
      "input": [
       "import sys\n",
-      "from PySide import QtGui\n",
+      "from PyQt4 import QtGui\n",
       "from capsul.qt_gui.widgets import PipelineDevelopperView\n",
       "from capsul.qt_gui.controller_widget import ControllerWidget\n",
       "\n",
-      "try:\n",
+      "if \"app_created\" not in globals():\n",
+      "    app_created = False\n",
+      "app = QtGui.QApplication.instance()\n",
+      "if app is None:\n",
       "    app = QtGui.QApplication(sys.argv)\n",
-      "except:\n",
-      "    app = QtGui.QApplication.instance()\n",
+      "    app_created = True\n",
       "view = PipelineDevelopperView(xmlpipe)\n",
       "controller = ControllerWidget(xmlpipe, live=True)\n",
       "view.show()\n",
       "controller.show()\n",
-      "app.exec_()\n",
-      "del view"
+      "if app_created:\n",
+      "    app.exec_()"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 10
+     "prompt_number": 17
     },
     {
      "cell_type": "markdown",
@@ -653,7 +692,7 @@
        ]
       }
      ],
-     "prompt_number": 11
+     "prompt_number": 18
     },
     {
      "cell_type": "markdown",
