--- a/doc/source/_static/tutorial/capsul_object_oriented_tutorial.ipynb
+++ b/doc/source/_static/tutorial/capsul_object_oriented_tutorial.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:357da4758707b410ea80440cc3b0cd0383a0cba95cf53b60308a11b38eb90e58"
+  "signature": "sha256:ab5d4888c008e0d44d0954d4aafad9232b2998ad17928b1dc19fcebf2fd6d3e3"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -56,7 +56,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "0.0.1\n"
+        "1.0.0\n"
        ]
       }
      ],
@@ -120,7 +120,7 @@
        "output_type": "pyout",
        "prompt_number": 2,
        "text": [
-        "<capsul.process.process.ProcessResult at 0x7fe9cef39a90>"
+        "<capsul.process.process.ProcessResult at 0x7f0089707690>"
        ]
       }
      ],
@@ -328,7 +328,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 7
+     "prompt_number": 4
     },
     {
      "cell_type": "markdown",
@@ -368,58 +368,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "WARNING:root:API 'QString' has already been set to version 1\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "WARNING:root:API 'QVariant' has already been set to version 1\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "WARNING:root:API 'QDate' has already been set to version 1\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "WARNING:root:API 'QDateTime' has already been set to version 1\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "WARNING:root:API 'QTextStream' has already been set to version 1\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "WARNING:root:API 'QTime' has already been set to version 1\n"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stderr",
-       "text": [
-        "WARNING:root:API 'QUrl' has already been set to version 1\n"
-       ]
-      }
-     ],
-     "prompt_number": 8
+     "outputs": [],
+     "prompt_number": 7
     },
     {
      "cell_type": "heading",
