--- a/doc/source/_static/tutorial/capsul_object_oriented_tutorial.ipynb
+++ b/doc/source/_static/tutorial/capsul_object_oriented_tutorial.ipynb
@@ -957,7 +957,7 @@
       "\n",
       "betpipe = get_process_instance(\"nipype.interfaces.fsl.BET\")\n",
       "betpipe.get_help()\n",
-      "betpipe.in_file=\"/neurospin/tmp/agrigis/demo/MNI152_T1_2mm.nii.gz\""
+      "betpipe.in_file=\"/tmp/MNI152_T1_2mm.nii.gz\""
      ],
      "language": "python",
      "metadata": {},
