--- a/doc/source/_static/tutorial/capsul_object_oriented_tutorial.ipynb
+++ b/doc/source/_static/tutorial/capsul_object_oriented_tutorial.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:efcbd353172b21c795c2c7daaada579220089d20c74b3e39faf0cca48aebedbe"
+  "signature": "sha256:f34f680ca1758010c03f50b8a202c6e19b6db0e5ddee1972168f19cdb125cfa3"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -612,7 +612,7 @@
       "\n",
       "study_config = StudyConfig(\n",
       "    modules=[\"SmartCachingConfig\", \"FSLConfig\"],\n",
-      "    fsl_config=\"/etc/fsl/4.1/fsl.sh\",\n",
+      "    fsl_config=\"/etc/fsl/5.0/fsl.sh\",\n",
       "    use_fsl=True,\n",
       "    use_smart_caching=True,\n",
       "    output_directory=\"/tmp/capsul_demo\")\n",
@@ -705,79 +705,66 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "from capsul.utils import xml_to_pipeline\n",
+      "from capsul.pipeline.xml import create_xml_pipeline\n",
       "\n",
-      "xmlstr = '''<pipeline class_name=\"DemoPipeline\">\n",
-      "    <docstring>A demo pipeline.\n",
-      "    </docstring>\n",
-      "    <processes>\n",
-      "        <standard name=\"proc1\">\n",
-      "            <module>capsul.pipeline.test.test_pipeline.DummyProcess</module>\n",
-      "        </standard>\n",
-      "        <standard name=\"proc2\">\n",
-      "            <module>capsul.pipeline.test.test_pipeline.DummyProcess</module>\n",
-      "        </standard>\n",
-      "        <standard name=\"proc3\">\n",
-      "            <module>capsul.pipeline.test.test_pipeline.DummyProcess</module>\n",
-      "        </standard>\n",
-      "        <standard name=\"proc4\">\n",
-      "            <module>capsul.pipeline.test.test_pipeline.DummyProcess</module>\n",
-      "        </standard>\n",
-      "        <switch name=\"proc_select\" export_switch=\"0\">\n",
-      "            <input>proc1</input>\n",
-      "            <input>proc2</input>\n",
-      "            <output>image</output>\n",
-      "            <switch_value>proc1</switch_value>\n",
+      "xmlstr = '''<pipeline capsul_xml=\"2.0\">\n",
+      "        <process name=\"proc1\"\n",
+      "            module=\"capsul.pipeline.test.test_pipeline.DummyProcess\">\n",
+      "        </process>\n",
+      "        <process name=\"proc2\"\n",
+      "            module=\"capsul.pipeline.test.test_pipeline.DummyProcess\">\n",
+      "        </process>\n",
+      "        <process name=\"proc3\"\n",
+      "            module=\"capsul.pipeline.test.test_pipeline.DummyProcess\">\n",
+      "        </process>\n",
+      "        <process name=\"proc4\"\n",
+      "            module=\"capsul.pipeline.test.test_pipeline.DummyProcess\">\n",
+      "        </process>\n",
+      "        <switch name=\"proc_select\" switch_value=\"proc1\">\n",
+      "            <input name=\"proc1\"/>\n",
+      "            <input name=\"proc2\"/>\n",
+      "            <output name=\"image\"/>\n",
       "        </switch>\n",
-      "        <switch name=\"proc_select2\" export_switch=\"0\">\n",
-      "            <input>proc3</input>\n",
-      "            <input>proc4</input>\n",
-      "            <output>image</output>\n",
-      "            <switch_value>proc3</switch_value>\n",
+      "        <switch name=\"proc_select2\" switch_value=\"proc3\">\n",
+      "            <input name=\"proc3\"/>\n",
+      "            <input name=\"proc4\"/>\n",
+      "            <output name=\"image\"/>\n",
       "        </switch>\n",
-      "    </processes>\n",
-      "    <inputs>\n",
-      "        <input name=\"input_image1\" dest=\"proc1.input_image\"></input>\n",
-      "        <input name=\"input_image2\" dest=\"proc2.input_image\"></input>\n",
-      "        <input name=\"proc_select\" dest=\"proc_select.switch\"></input>\n",
-      "        <input name=\"proc_select2\" dest=\"proc_select2.switch\"></input>\n",
-      "        <input name=\"input_image4\" dest=\"proc4.input_image\"></input>\n",
-      "        <input name=\"input_image3\" dest=\"proc3.input_image\"></input>\n",
-      "    </inputs>\n",
-      "    <outputs>\n",
-      "        <output name=\"image_out1\" src=\"proc_select.image\" weak_link=\"1\"></output>\n",
-      "        <output name=\"image_out3\" src=\"proc3.output_image\" weak_link=\"1\"></output>\n",
-      "        <output name=\"image_out5\" src=\"proc_select2.image\" weak_link=\"1\"></output>\n",
-      "    </outputs>\n",
-      "    <links>\n",
-      "        <link src=\"input_image1\" dest=\"proc1.input_image\"></link>\n",
-      "        <link src=\"input_image2\" dest=\"proc2.input_image\"></link>\n",
-      "        <link src=\"proc_select\" dest=\"proc_select.switch\"></link>\n",
-      "        <link src=\"proc_select2\" dest=\"proc_select2.switch\"></link>\n",
-      "        <link src=\"input_image4\" dest=\"proc4.input_image\"></link>\n",
-      "        <link src=\"input_image3\" dest=\"proc3.input_image\"></link>\n",
-      "        <link src=\"proc1.output_image\" dest=\"proc_select.proc1_switch_image\"></link>\n",
-      "        <link src=\"proc2.output_image\" dest=\"proc_select.proc2_switch_image\"></link>\n",
-      "        <link src=\"proc3.output_image\" dest=\"proc_select2.proc3_switch_image\"></link>\n",
-      "        <link src=\"proc4.output_image\" dest=\"proc_select2.proc4_switch_image\"></link>\n",
-      "    </links>\n",
-      "    <positions>\n",
-      "        <position process=\"inputs\" x=\"-151.0\" y=\"227.4447\"></position>\n",
-      "        <position process=\"proc_select\" x=\"381.6498\" y=\"160.1012\"></position>\n",
-      "        <position process=\"outputs\" x=\"668.1498\" y=\"319.9886\"></position>\n",
-      "        <position process=\"proc_select2\" x=\"381.6498\" y=\"507.1947\"></position>\n",
-      "        <position process=\"proc4\" x=\"144.2624\" y=\"589.7949\"></position>\n",
-      "        <position process=\"proc1\" x=\"123.2624\" y=\"-4.0\"></position>\n",
-      "        <position process=\"proc3\" x=\"146.2624\" y=\"391.9886\"></position>\n",
-      "        <position process=\"proc2\" x=\"132.2624\" y=\"171.8197\"></position>\n",
-      "    </positions>\n",
+      "        <link source=\"input_image1\" dest=\"proc1.input_image\"/>\n",
+      "        <link source=\"input_image2\" dest=\"proc2.input_image\"/>\n",
+      "        <link source=\"proc_select\" dest=\"proc_select.switch\"/>\n",
+      "        <link source=\"proc_select2\" dest=\"proc_select2.switch\"/>\n",
+      "        <link source=\"input_image4\" dest=\"proc4.input_image\"/>\n",
+      "        <link source=\"input_image3\" dest=\"proc3.input_image\"/>\n",
+      "        \n",
+      "        <link dest=\"image_out1\" source=\"proc_select.image\" weak_link=\"true\"/>\n",
+      "        <link dest=\"image_out3\" source=\"proc3.output_image\" weak_link=\"true\"/>\n",
+      "        <link dest=\"image_out5\" source=\"proc_select2.image\" weak_link=\"true\"/>\n",
+      "\n",
+      "        <link source=\"input_image1\" dest=\"proc1.input_image\"></link>\n",
+      "        <link source=\"input_image2\" dest=\"proc2.input_image\"></link>\n",
+      "        <link source=\"proc_select\" dest=\"proc_select.switch\"></link>\n",
+      "        <link source=\"proc_select2\" dest=\"proc_select2.switch\"></link>\n",
+      "        <link source=\"input_image4\" dest=\"proc4.input_image\"></link>\n",
+      "        <link source=\"input_image3\" dest=\"proc3.input_image\"></link>\n",
+      "        <link source=\"proc1.output_image\" dest=\"proc_select.proc1_switch_image\"></link>\n",
+      "        <link source=\"proc2.output_image\" dest=\"proc_select.proc2_switch_image\"></link>\n",
+      "        <link source=\"proc3.output_image\" dest=\"proc_select2.proc3_switch_image\"></link>\n",
+      "        <link source=\"proc4.output_image\" dest=\"proc_select2.proc4_switch_image\"></link>\n",
+      "    <gui>\n",
+      "        <position name=\"inputs\" x=\"-151.0\" y=\"227.4447\"></position>\n",
+      "        <position name=\"proc_select\" x=\"381.6498\" y=\"160.1012\"></position>\n",
+      "        <position name=\"outputs\" x=\"668.1498\" y=\"319.9886\"></position>\n",
+      "        <position name=\"proc_select2\" x=\"381.6498\" y=\"507.1947\"></position>\n",
+      "        <position name=\"proc4\" x=\"144.2624\" y=\"589.7949\"></position>\n",
+      "        <position name=\"proc1\" x=\"123.2624\" y=\"-4.0\"></position>\n",
+      "        <position name=\"proc3\" x=\"146.2624\" y=\"391.9886\"></position>\n",
+      "        <position name=\"proc2\" x=\"132.2624\" y=\"171.8197\"></position>\n",
+      "    </gui>\n",
       "</pipeline>'''\n",
       "\n",
-      "open('/tmp/demo_pipeline.xml', 'w').write(xmlstr)\n",
-      "\n",
-      "xml_to_pipeline.class_factory('/tmp/demo_pipeline.xml', globals())\n",
-      "pipeline_class = DemoPipeline\n",
-      "pipeline = DemoPipeline()\n"
+      "DemoPipeline = create_xml_pipeline('__main__', 'DemoPipeline', xmlstr)\n",
+      "pipeline = DemoPipeline()"
      ],
      "language": "python",
      "metadata": {},
@@ -959,7 +946,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "from capsul.process import get_process_instance\n",
+      "from capsul.api import get_process_instance\n",
       "\n",
       "betpipe = get_process_instance(\"nipype.interfaces.fsl.BET\")\n",
       "betpipe.get_help()\n",
