--- a/doc/source/_static/tutorial/capsul_object_oriented_tutorial.ipynb
+++ b/doc/source/_static/tutorial/capsul_object_oriented_tutorial.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:f34f680ca1758010c03f50b8a202c6e19b6db0e5ddee1972168f19cdb125cfa3"
+  "signature": "sha256:9b6ddd46ecb19e0ec6ef7e80223a44358427c8672edf861ef3c521488323a28e"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -126,7 +126,7 @@
      "source": [
       "<h2>Use a function as a building block</h2>\n",
       "\n",
-      "It is possible to convert a function in Process and thus use it as a building block of a pipeline. In the following example we will use the 'a_function_to_wrap' test function:\n"
+      "It is possible to convert a function in Process and thus use it as a building block of a pipeline. In the following example we will use an addition simple Python function:\n"
      ]
     },
     {
@@ -154,7 +154,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "<p>This is a pure Python function with an XML Process description in the @xml_process decorator. Inside &lt;process&gt; and &lt;/process&gt; elements, each input parameters are described as well as the returned value. The parameters are typed and a description is asked in order to generate proper tooltips or documentations.</p>\n",
+      "<p>This is a pure Python function with an XML Process description in the @xml_process decorator. Inside <code>&lt;process&gt;</code> and <code>&lt;/process&gt;</code> elements, each input parameters are described as well as the returned value. The parameters are typed and a description is asked in order to generate proper tooltips or documentations.</p>\n",
       "\n",
       "<p>We can now create a Process from this Python function:</p>"
      ]
@@ -165,7 +165,7 @@
      "input": [
       "from capsul.api import get_process_instance\n",
       "\n",
-      "process = get_process_instance(add)\n"
+      "process = get_process_instance('__main__.add')\n"
      ],
      "language": "python",
      "metadata": {},
@@ -278,6 +278,8 @@
       "\n",
       "controller1 = ControllerWidget(pipeline1, live=True)\n",
       "controller1.show()\n",
+      "controller2 = ControllerWidget(pipeline1, live=True)\n",
+      "controller2.show()\n",
       "if run_qt_loop:\n",
       "    app.exec_()"
      ],
@@ -810,26 +812,26 @@
       "    },\n",
       "\n",
       "    \"shared_patterns\": {\n",
-      "      \"subject\": \"<center>_<subject>\"\n",
+      "      \"subject_dir\": \"<center>_<subject>\"\n",
       "    },\n",
       "\n",
       "    \"processes\": {\n",
       "        \"DemoPipeline\": {\n",
       "            \"input_image1\": \n",
-      "                [[\"input:{subject}/<subject>\", \"images\"]],\n",
+      "                [[\"input:<center>_<subject>/<subject>\", \"images\"]],\n",
       "            \"input_image2\":\n",
-      "                [[\"input:{subject}/alt2_<subject>\", \"images\"]],\n",
+      "                [[\"input:{subject_dir}/alt2_<subject>\", \"images\"]],\n",
       "            \"input_image3\":\n",
-      "                [[\"input:{subject}/alt2_<subject>\", \"images\"]],\n",
+      "                [[\"input:{subject_dir}/alt2_<subject>\", \"images\"]],\n",
       "            \"input_image4\":\n",
-      "                [[\"input:{subject}/alt4_<subject>\", \"images\"]],\n",
+      "                [[\"input:{subject_dir}/alt4_<subject>\", \"images\"]],\n",
       "            \"image_out1\":\n",
-      "                [[\"output:{subject}/out_image_<subject>_1\", \"images\"]],\n",
+      "                [[\"output:{subject_dir}/out_image_<subject>_1\", \"images\"]],\n",
       "            \"image_out3\":\n",
-      "                [[\"output:{subject}/out_image_<subject>_3\", \"images\"]]\n",
+      "                [[\"output:{subject_dir}/out_image_<subject>_3\", \"images\"]]\n",
       "        },\n",
       "        \"DemoPipeline.proc4\": {\n",
-      "            \"output_image\": [[\"output:{subject}/out_image_<subject>_4\", \"images\"]]\n",
+      "            \"output_image\": [[\"output:{subject_dir}/out_image_<subject>_4\", \"images\"]]\n",
       "        }\n",
       "    }\n",
       "\n",
