tutorial notebook update

--- a/doc/source/_static/tutorial/capsul_object_oriented_tutorial.ipynb
+++ b/doc/source/_static/tutorial/capsul_object_oriented_tutorial.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:712adc479eb013dec65fdc31c85b776b90503a715c342d9c35f163c4bb8d0f5a"
+  "signature": "sha256:3c41d5309352e540c7d0d6c726c1310ca42cace8974570ff2225ded568e04adb"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -955,11 +955,6 @@
       "  \"meshes_format\" : \"gii\",\n",
       "}\n",
       "\n",
-      "def callback():\n",
-      "    pf.attributes = dict((k,getattr(pf,k)) for k in pf.user_traits())\n",
-      "    pf.create_completion()\n",
-      "    \n",
-      "\n",
       "study_config = StudyConfig(init_config=config, \n",
       "                           modules=StudyConfig.default_modules + ['FomConfig', 'BrainVISAConfig'])\n",
       "soma_app.fom_manager._cache = None # while debugging\n",
@@ -969,7 +964,7 @@
       "ce = ProcessCompletionEngine.get_completion_engine(mp)\n",
       "print('completion engine type:', type(ce).__name__)\n",
       "attributes = ce.get_attribute_values()\n",
-      "attributes.on_trait_change(ce.attributes_changed, 'anytrait')\n",
+      "ce.install_auto_completion()\n",
       "attributes.center = 'subjects'\n",
       "attributes.subject = 'irm2'\n",
       "\n",
