avoid failing in StudyConfig part when FSL is not found

--- a/doc/source/_static/tutorial/capsul_object_oriented_tutorial.ipynb
+++ b/doc/source/_static/tutorial/capsul_object_oriented_tutorial.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:3c41d5309352e540c7d0d6c726c1310ca42cace8974570ff2225ded568e04adb"
+  "signature": "sha256:6ddcb7b636f160dd75c1370b5d1aa33315a3e2264b4b940da18845302f1d0d87"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -9,11 +9,17 @@
   {
    "cells": [
     {
+     "cell_type": "heading",
+     "level": 1,
+     "metadata": {},
+     "source": [
+      "CAPSUL: chain algorithms in pipelines"
+     ]
+    },
+    {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "<h1>Capsul: Collaborative Analysis Platform : Simple, Unifying, Lean</h1>\n",
-      "\n",
       "<p>Capsul is a simple and efficient Python tool that aims to organize a set of processings.\n",
       "It is accessible to everybody, and is reusable in various contexts.\n",
       "The project is hosted on github: https://github.com/neurospin/capsul.</p>\n",
@@ -635,7 +641,6 @@
       "study_config = StudyConfig(\n",
       "    modules=[\"SmartCachingConfig\", \"FSLConfig\"],\n",
       "    fsl_config=\"/etc/fsl/5.0/fsl.sh\",\n",
-      "    use_fsl=True,\n",
       "    use_smart_caching=True,\n",
       "    output_directory=\"/tmp/capsul_demo\")\n",
       "print(study_config.run.__doc__)"
