improvements to allow testing if nipype is available without crashing

--- a/doc/source/_static/tutorial/capsul_object_oriented_tutorial.ipynb
+++ b/doc/source/_static/tutorial/capsul_object_oriented_tutorial.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:6ddcb7b636f160dd75c1370b5d1aa33315a3e2264b4b940da18845302f1d0d87"
+  "signature": "sha256:1ba5a0bade491e9344606f1753d7d331256b3d915d12c7b9a2a55a6045b82629"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1028,9 +1028,13 @@
      "input": [
       "from capsul.api import get_process_instance\n",
       "\n",
-      "betpipe = get_process_instance(\"nipype.interfaces.fsl.BET\")\n",
-      "betpipe.get_help()\n",
-      "betpipe.in_file=\"/tmp/MNI152_T1_2mm.nii.gz\""
+      "study_config = StudyConfig(init_config=config, \n",
+      "                           modules=StudyConfig.default_modules + ['NipypeConfig'])\n",
+      "\n",
+      "if study_config.use_nipype:\n",
+      "    betpipe = get_process_instance(\"nipype.interfaces.fsl.BET\")\n",
+      "    betpipe.get_help()\n",
+      "    betpipe.in_file=\"/tmp/MNI152_T1_2mm.nii.gz\""
      ],
      "language": "python",
      "metadata": {},
@@ -1047,8 +1051,9 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "study_config.reset_process_counter()\n",
-      "study_config.run(betpipe, verbose=1)"
+      "if study_config.use_nipype:\n",
+      "    study_config.reset_process_counter()\n",
+      "    study_config.run(betpipe, verbose=1)"
      ],
      "language": "python",
      "metadata": {},
