use a clean directory for FOMs

--- a/doc/source/_static/tutorial/capsul_object_oriented_tutorial.ipynb
+++ b/doc/source/_static/tutorial/capsul_object_oriented_tutorial.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:1ba5a0bade491e9344606f1753d7d331256b3d915d12c7b9a2a55a6045b82629"
+  "signature": "sha256:7039df788453ba7509c89507987de257dcdfc90b4472b581c291162edd7b327c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -916,7 +916,9 @@
       "}\n",
       "'''\n",
       "\n",
-      "open('/tmp/demo_fom.json', 'w').write(fom_content)\n"
+      "try: os.path.makedirs('/tmp/capsul_demo')\n",
+      "except: pass\n",
+      "open('/tmp/capsul_demo/demo_fom.json', 'w').write(fom_content)\n"
      ],
      "language": "python",
      "metadata": {},
@@ -941,12 +943,12 @@
       "from capsul.attributes.completion_engine import ProcessCompletionEngine\n",
       "from capsul.qt_gui.widgets.attributed_process_widget import AttributedProcessWidget\n",
       "\n",
-      "# the following 4 lines are a hack to add /tmp to the FOM search path\n",
+      "# the following 4 lines are a hack to add /tmp/capsul_demo to the FOM search path\n",
       "# before it is used by StudyConfig\n",
       "from soma.application import Application\n",
       "soma_app = Application('capsul', plugin_modules=['soma.fom'])\n",
       "soma_app.initialize()\n",
-      "soma_app.fom_manager.paths.append('/tmp')\n",
+      "soma_app.fom_manager.paths.append('/tmp/capsul_demo')\n",
       "\n",
       "config = {\n",
       "  \"name\" : \"morphologist_fom\",\n",
